--- a/style.css
+++ b/style.css
@@ -3,3 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header{
+  height: 60px;
+  background-color: brown;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dp-logo{
+  font-size: 10px;
+  margin-left: 20px;
+}
+
+span{
+  margin-right: 20px;
+}
+
+button{
+  margin-right: 20px;
+}
