--- a/style.css
+++ b/style.css
@@ -4,89 +4,610 @@
   box-sizing: border-box;
 }
 
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-/*BODY*/
-body {
+body{
   font-family: 'Open Sans', sans-serif;
-}
-/*HEADER*/
-header .container-h{
-  background-color: white;
-  height: 60px;
-  width: 100%;
-  padding: 15px 20px;
-  position: fixed;
-  min-width: 960px;
+  font-size: small;
 }
 
-header .logo-d, header ul, header a{
-  vertical-align: sub;
+img{
+  max-width: 100%;
 }
 
-ul{
-  list-style-type: none;
-}
-
-header ul a{
-  padding: 30px 0;
-}
-
-header .logo-d, header ul{
-  margin-top: 3px;
-}
-
-header .button{
-  position: relative;
-  top: 0;
-  float: right;
-  margin-left: 15px;
-}
-
-.logo-d{
-  float: left;
-  margin-right: 15px;
-  width: 100px;
-}
-
-.logo-d img{
-  width: 100%;
-}
-
-header nav{
-  display: inline-block;
-  width: calc(100% - 115px);
-}
-
-.nav-left{
-  float: left;
-}
-
-.nav-right{
-  float: right;
-}
-
-nav ul li{
-  display: inline;
-  margin: 0 15px;
+li{
+  list-style: none;
 }
 
 a{
   text-decoration: none;
+  display: inline-block;
   color: black;
 }
 
-.button{
-  padding: 3px 12px;
-  display: inline-block;
+.button a{
+  background-color:#0061FF ;
+  color:#ffff;
+  padding: 5px 10px;
 }
 
-.button.blue{
-  background-color: #0061ff;
+.white-button a{
+  background-color: #ffff;
+  padding: 5px 10px;
+  margin: 20px 0;
+  font-weight: 500;
+}
+
+.white-button.border a{
+  border: 2px solid black;
+}
+
+.text{
+  width: 30%;
+  font-weight:500;
+}
+
+a.underline:hover{
+  text-decoration: underline;
+}
+
+a.size-hover:hover{
+  font-size: medium;
+}
+
+.button a:hover{
+  border: 3px solid #0062ff70 ;
+}
+
+.white-button a:hover{
+  border: 3px solid #ffff;
+}
+
+.white-button.border a:hover{
+  border: 3px solid black;
+}
+
+.fa-solid.fa-arrow-down:active{
   color: white;
 }
 
-/*MAIN*/
+.button a:active{
+  filter: invert(1);
+}
+
+.white-button a:active{
+  filter: invert(1);
+}
+
+.white-button.border a:active{
+  filter: invert(1);
+}
+
+nav{
+  display: flex;
+  width: 100%;
+  position: relative;
+  padding: 15px;
+  background-color: #ffff;
+  border-bottom: 2px solid lightgray;
+}
+
+nav ul li{
+  margin: 5px 30px;
+  position:relative;
+}
+
+.lineanera{
+  border-collapse: separate;
+  border-spacing: 10px;
+}
+
+.lineanera:hover {
+  border-bottom: 2px solid black;
+}
+
+nav ul li hr{
+  border: 1px solid white;
+  position: absolute;
+  bottom: -18px;
+  width: 50px;
+  cursor: pointer;
+}
+
+nav ul li a{
+  color: black;
+}
+
+nav .nav.right{
+  position: absolute;
+  right: 0;
+}
+
+nav .button{
+  margin:0 30px;
+}
+
+nav ul.main-menu{
+  display: flex;
+}
+
+nav li.dropdown{
+  position: relative;
+}
+
+nav ul.dropdown-menu{
+  position: absolute;
+  top:40px;
+  left:-30px;
+  cursor: pointer;
+  background-color:#FAF9FA;
+  opacity:0;
+  transition: all .5s;
+}
+
+nav ul.dropdown-menu li{
+  width: 180px;
+  height: 30px;
+  margin: 10px 0;
+  text-align: center;
+}
+
+nav ul li hr.small{
+  width: 40px;
+}
+
+nav ul li hr.medium{
+  width: 80px;
+}
+
+nav ul li hr.large{
+  width: 100px;
+}
+
+nav ul li hr.x-large{
+  width: 150px;
+}
+
+nav ul li hr:hover{
+  border: 2px solid black;
+}
+
+header{
+  position:fixed;
+  left:0;
+  right:0;
+  z-index: 999;
+  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.5);
+} 
+
+main h3{
+margin-top: 25px;
+margin-bottom: 10px;
+}
+
+main .jumbotron{
+  background-color: #B4D0E7;
+  margin: 0 auto;
+  height: 50%;
+  padding: 110px;
+  position: relative;
+}
+
+main .jumbotron h1{
+  font-weight: 600;
+  font-size: 70px;
+}
+
+main .jumbotron p{
+  margin-top: 80px;
+  margin-bottom: 30px;
+}
+
+main .jumbotron .cta.header div:nth-child(2){
+font-size: 500;
+margin-top:20px;
+margin-bottom: 50px;
+}
+
+main .jumbotron .cta.header div:last-child{
+  font-size: 50px;
+}
+
+main .jumbotron .img{
+  width: 60%;
+  position: absolute;
+  top: 380px;
+  right:80px
+}
+
+main hr{
+  margin: 30px 0;
+  width: 50px;
+}
+
+main ul{
+  display: flex;
+}
+
+main ul li{
+  margin: 25px 5px;
+}
+
+main .container-center{
+  margin: 50px auto;
+  width: 62%;
+}
+
+main .dropbox-plan h1{
+  font-size: xx-large;
+  margin-top: 250px;
+}
+
+main .dropbox-plan ul li a{
+  font-weight: 500;
+  margin-top: 50px;
+}
+
+main .dropbox-plan .monthly-billing i{
+  color: #0061ff;
+  font-weight: 500;
+}
+
+main .plan-column{
+  margin-top: 30px;
+  background-color: #red;
+}
+
+main .plan-top{
+  display: flex;
+  height:100% ;
+}
+
+main .plan{
+  width: 30%;
+  display: flex;
+  width: calc(100% / 3);
+  margin-right: 30px;
+}
+
+main .plan.right{
+  margin-right: 0;
+}
+
+main .container-plan{
+  background-color: #ffff;
+  border: 1px solid gray;
+}
+
+main .container-plan ul{
+  display: block;
+}
+
+main .container-plan ul li{
+  margin: 20px 0;
+}
+
+main .plan-type{
+  border-bottom:1px solid gray;
+  padding: 10px;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+main .plans{
+  margin: 0 30px;
+}
+
+main .plans h3 + div{ 
+  margin-top: 10px;
+  color: grey;
+}
+
+main .plans .condition{
+  margin: 50px 0;
+}
+
+main .condition ul li span{
+  margin-left:17px;
+}
+
+main .cta-plan div:last-child{
+  margin-top: 30px;
+}
+
+main .action{
+  color:#0061FF;
+  text-decoration: underline; 
+}
+
+main .plans .highlights{
+  margin: 20px 0;
+}
+
+main .plans .highlights ul{
+  display: block;
+}
+
+main .plans .highlights ul li{
+  margin: 20px 0;
+}
+
+main .plans .highlights ul li i{
+  color: #0061FF;
+}
+
+main .plan-bottom{
+  margin-top: 50px;
+}
+
+main .plan-bottom p{
+  margin:20px 0;
+}
+
+main .plan-bottom .team-text{
+  margin-left: 20px;
+  position: relative;
+}
+
+  main .row-title {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20px;
+}
+
+main .plan-bottom .button a{
+  padding: 5px 50px;
+}
+
+main .dropbox-patner{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 100px 0;
+}
+main .container-img{
+  width: 50%;
+}
+
+main .container-text{
+  width: 50%;
+}
+
+main .patner-text{
+  margin: 80px 52px;
+}
+
+main .patner-text p{
+  margin-top: 20px;
+}
+
+main .container-cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 100px;
+}
+
+main .more-operation{
+  width: calc(90% / 3);
+  margin:50px 0;
+}
+
+main .more-operation span{
+  text-decoration: underline;
+}
+
+main .more-operation h2{
+  margin-bottom: 20px;
+}
+
+main .cta-clients h1{
+  margin-bottom: 20px;
+}
+
+main .companies{
+  display: flex;
+  justify-content: space-between;
+}
+
+main .companies .box img {
+  filter: invert(1);
+  width:50%;
+  display: flex;
+  justify-content: center;
+  margin: 50px auto;
+}
+
+main .companies .box{
+  border: 1px solid black;
+  width: calc(100% / 3);
+  cursor: pointer;
+}
+
+main .companies div{
+  width: 50%;
+}
+
+main .companies .left{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+main .companies .box.center{
+  background-color:#F5F5F5 ;
+}
+
+main .companies .box.center img{
+  filter:invert(0);
+  width: 50%;
+  margin-left: 2px;
+}
+
+main .companies .box.center hr{
+  color: rgba(211, 211, 211, 0.648);
+}
+
+main .companies .right{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+main .companies .box.left div:nth-child(1) {
+  background-color:#A2D39B;
+  border: 6px solid white;
+}
+
+main .companies .box.left div:nth-child(2) {
+  background-color: #61082B;
+}
+
+main .companies .box.left div:nth-child(3){
+  background-color:#0093CE;
+}
+
+main .companies .box.left div:nth-child(4){
+  background-color: #FF1C1C;
+}
+
+main .companies .box.right div:nth-child(1){
+  background-color:#FF1C1C;
+}
+
+main .companies .box.right div:nth-child(2){
+  background-color:#B4D0E7;
+}
+
+main .companies .box.right div:nth-child(3){
+  background-color:#0D2481;
+}
+
+main .companies .box.right div:nth-child(4){
+  background-color:#FFD830;
+}
+
+main .companies .section.bottom{
+  display: flex;
+}
+
+main .cta.main{
+  background-color: #B4D0E7;
+  display: flex;
+  justify-content: space-evenly;
+  color:#61082B;
+  margin-bottom: 100px;
+  padding: 100px 0;
+}
+
+main .frequent-questions ul{
+  display: block;
+  font-size: medium;
+  font-weight: bold;
+  padding: 20px 0;
+}
+
+main .frequent-questions ul li{
+  border-bottom: 1px solid lightgray;
+}
+
+main .frequent-questions h1{
+  margin-bottom: 50px;
+}
+
+main .question-menu{
+  border-top: 1px solid lightgray;
+}
+
+main .question-menu ul li{
+  font-weight: 500;
+  color: grey;
+  position: relative;
+}
+
+main ul li .dropdown.hidden{
+  display: none;
+}
+
+main .dropdown-question .dropdown li{
+  position: absolute;
+  top:5120px;
+}
+
+main .dropdown-question .dropdown a{
+  text-decoration: underline;
+  cursor: pointer;
+  color: grey;
+  display: inline;
+}
+
+main .dropdown-question a{
+  position: relative;
+}
+
+main .question-menu .fa-solid.fa-chevron-down{
+  margin-left: 78px;
+}
+
+main .question-menu .fa-solid.fa-chevron-up{
+  position: absolute;
+  right: 450px;
+  display: none;
+}
+
+main ul.dropdown-question:hover .dropdown.hidden{
+  opacity: 1;
+  padding-bottom: 50px;
+  display: block;
+}
+
+.dropdown-menu:hover li:first-child{
+  background-color: lightgray;
+}
+
+.dropdown:hover .dropdown-menu{
+  opacity: 1;
+}
+
+main .question-menu li:hover .fa-solid.fa-chevron-up{
+  display: block;
+}
+
+main .question-menu:hover .fa-solid.fa-chevron-down{
+  display: none;
+}
+
+footer{
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+
+footer hr{
+  margin-top: 100px;
+}
+
+footer div{
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+}
+
+footer ul li a{
+  color: #ffff;
+  display: flex;
+  margin:10px
+}
+
+footer ul li:first-child{
+  font-weight: bold;
+  font-size: medium;
+  padding-top:100px;
+  margin-bottom:20px;
+}
+
+footer a{
+  color: rgba(211, 211, 211, 0.648);
+  margin: 50px 0 30px 0;
+}
+
+footer ul li a:hover{
+  text-decoration: underline;
+}
